[package]
name = "Arcanum"
version = "0.1.0"
authors = ["nicholas-rotondo <nicholaslouis1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
sha2 = "0.10.8"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }